0199: Quick update: sky130 and Tiny Tapeout analog design

--- a/0198-2024-04-03.md
+++ b/0198-2024-04-03.md
@@ -123,3 +123,4 @@ In future, or for someone else, these links might help too:
     ```
 *   My TT06 repo is https://github.com/algofoogle/tt06-grab-bag (created from template: https://github.com/TinyTapeout/tt06-analog-template)
 *   I've done a basic CMOS inverter and testbench in xschem. It also models the expected Tiny Tapeout analog output parasitics.
+*   The TT parasitics make for a very weak output and long slew at 25MHz, so I increased the size of the PFET/NFET transistor widths by 4&times; from 2/1 to 8/4, and it made it somewhat acceptable.
