0200: Belated update (TT chips, and analog)

--- a/0198-2024-04-03.md
+++ b/0198-2024-04-03.md
@@ -12,7 +12,7 @@ The cocotb test code is found in the [`1.0-test` branch](https://github.com/algo
 
 Here's a rendering of the first 220 frames after reset:
 
-<video controls src="rbz10-test-gl.mp4" title="Title"></video>
+<video controls src="files/0198/rbz10-test-gl.mp4" title="Title"></video>
 
 This was created by:
 1.  Modifying `tb.v` to disable VCD dump; otherwise it will grow to be too large after a handful of frames.
