--- a/0199-2024-04-04.md
+++ b/0199-2024-04-04.md
@@ -2,9 +2,9 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0198**-2024-04-03.md](./0198-2024-04-03.md) | [**0200**-2024-04-05.md](./0200-2024-04-05.md) |
+| [**0198**-2024-04-03.md](./0198-2024-04-03.md) | [**0200**-2024-05-01.md](./0200-2024-05-01.md) |
 
-# Quick update on sky130 and Tiny Tapeout analog design
+# Quick update: sky130 and Tiny Tapeout analog design
 
 *   I've done labs 3.1 (Magic layout challenge) and 3.2 (lay out my own inverter design).
 *   [`tt_um_algofoogle_tt06_grab_bag.mag`](https://github.com/algofoogle/tt06-grab-bag/blob/071a0c6bcbd7e322c2a11f76f5833e3a30ec3bf6/mag/tt_um_algofoogle_tt06_grab_bag.mag) is the overall TT 1x2 tile area.
