0203: ngspice full-circuit simulation results and improvements

--- a/0203-2024-05-20.md
+++ b/0203-2024-05-20.md
@@ -3,3 +3,80 @@
 | Previous journal: | Next journal: |
 |-|-|
 | [**0202**-2024-05-15.md](./0202-2024-05-15.md) | *Next journal TBA* |
+
+
+# ngspice full-circuit simulation results and improvements
+
+In my last [0202](./0202-2024-05-15.md) journal I extracted and simulated my full tt06-grab-bag layout in ngspice, and got it to work (though slowly).
+
+In my first attempt I found that it was giving weird glitches in the behaviour of the digital design:
+
+![Glitches in the digital design during simulation](./i/0203-glitchy.png)
+
+It shows:
+
+*   Skipped counts (?) near 8us and 37.5us
+*   Initially failed reset to 0 that should happen at 25.6us (640 pixels &times; 40ns)
+*   Frame length prior to blue spike (at ~35us) should be 32us, not 35us.
+
+I can't remember what my timestep was with this simulation, but I think it was 8ns, maybe 4ns.
+
+I made changes and got it to work correctly (it seems):
+
+*   Replaced the `d_osc` clock with a regular V source PULSE clock.
+*   This meant I could remove the `set trtol=...` line from `.spiceinit`.
+*   Made a correction where I was accidentally de/asserting `rst_n` exactly on `clk` rising edges -- shifted it by -10ns to avoid possible metastability issues.
+*   Changed `tran` timestep (say, from 4ns?) to 0.5ns
+*   Consequently also had to remove the `optran` line from `.spiceinit`.
+
+I increased total threads to 20 (after adjusting my VM too).
+
+It's slow, taking 9~10 hours per VGA line, but it seems stable now:
+
+![Stable render of digital design in simulation](./i/0203-stable.png)
+
+After several days, it looks like this:
+
+![Graph of simulation results after several days](./i/0203-longrun.png)
+
+## Looking at some features
+
+The initial blue spike should be a single blue pixel (40ns) at full intensity. In 40ns it climbs to about half (~0.9V) of its target 1.8V, before it gets turned off and sinks back down to catch up with the red graph in about 240ns (6 pixels):
+
+![Blue spike timing](./i/0203-bluespike.png)
+
+Falling edge for red output from full intensity to 0 is about the same. It drops from full intensity (~1.8V) to nearly 0 in about 270ns. It doesn't reach zero (and probably levels off a bit) because within (say) 280ns, the red output *target* will already have climbed to (7/255)*1.8 = 0.05 volts, and this is about what we see:
+
+![Red output falling edge](./i/0203-redfall.png)
+
+And for future reference, here's how all 3 channels look when starting to show some life and variety:
+
+![RGB outputs around the 5th line](./i/0203-rgb.png)
+
+There's some other irregular stuff like what's shown below, which I currently put down either to quirks of the layout, or the digital circuit behaviour, or more likely what appears to be different output buffer sizes from each of the RGB888 pins:
+
+![Irregular ramps](./i/0203-irregular.png)
+
+## Rendering results
+
+Here's what I've rendered over several days (wow, so fast):
+
+![6 VGA lines rendered](./i/0203-render6.png)
+
+It's only 6 lines, but if we stretch it we can start to see features:
+
+![6 lines stretched to 600](./i/0203-render600.png)
+
+It's no so obvious but we can see the ramp irregularity at about the mid-point of each "pipe", and we can start to see the XOR texture starting to emerge as banding. We also see the blue diagonal creeping in. There is also activity on the green channel, but can't be seen because it's too dark.
+
+Here are two images which compare: (a) top which is this output, with green enhanced; with (b) bottom which is my 'dacboost' reference:
+
+![Comparing this sim with my reference](./i/0203-compare.png)
+
+
+# TODO
+
+*   Find out how good the sim is if we use (say) 2ns step instead of 0.5ns.
+*   Digital RGB888 outputs to drive equally-sized buffers on INPUT side of DACs, for better linearity.
+*   Work out the right size to use for resistors.
+*   Get to learn GPIO pins and other options of OpenFrame
